--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/snowtafir/xianxin-plugin"
+    "url": "https://github.com/maqibg/trss-xianxin-plugin"
   },
   "keywords": [
     "Yunzai-Bot",
